# logln

./: .gitignore  CMakeLists.txt  README.md  build.py  run_tests.bat
cmake/: loglnConfig.cmake.in
examples/: CMakeLists.txt  advanced.cpp  advanced_c.c  basic_c.c  basic_cpp.cpp  decode_logs.py
include/logln/: config.hpp  decoder.h  formatter.hpp  logger.hpp  logln.h  logln_c.h  platform.hpp  types.hpp
src/: appender.cpp  appender.hpp  async_worker.cpp  async_worker.hpp  buffer.hpp  chacha20_encryptor.cpp  compressor.hpp  console_sink.cpp  decoder.cpp  encryptor.hpp  file_sink.cpp  formatter.cpp  log_buffer.cpp  log_buffer.hpp  log_header.hpp  logger.cpp  logln.cpp  logln_c.cpp  mmap_buffer.cpp  platform.cpp  sink.hpp  utils.cpp  utils.hpp  zstd_compressor.cpp
tests/: CMakeLists.txt  benchmark_test.cpp  buffer_test.cpp  compressor_test.cpp  encryption_test.cpp  encryptor_test.cpp  formatter_test.cpp  log_buffer_test.cpp  logger_test.cpp
tools/: CMakeLists.txt  logln_decode.cpp  logln_keygen.cpp
